--- a/src/components/CardNota/style.css
+++ b/src/components/CardNota/style.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    background-color: bisque;
+    background-color: rgb(184, 184, 183);
     border-radius: 4px;
     flex-wrap: wrap;
-    box-shadow: 0 0 4px rgb(0,0,0,0.3);
+    box-shadow: 0px 5px 15px rgba(21, 255, 0, 0.996);
     padding: 16px;
 }
 .card-nota_cabecalho{
