Finalizacao de projeto de notas em React

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -9,8 +9,8 @@
 
 :root {
     --primaria: #ffffff;
-    --secundaria: #fc6603;
-    --secundaria-ativa : #d57647;
-    --fundo: #262424;
+    --secundaria: #4B0082;
+    --secundaria-ativa : #9400D3;
+    --fundo: #8A2BE2;
     --fundo-detalhes: #dedede;
 }
