--- a/src/components/CardNota/style.css
+++ b/src/components/CardNota/style.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    background-color: rgb(184, 184, 183);
+    background-color: 	#9932CC;
     border-radius: 4px;
     flex-wrap: wrap;
-    box-shadow: 0px 5px 15px rgba(21, 255, 0, 0.996);
+    box-shadow: 0px 5px 15px rgba(255, 0, 200, 0.487);
     padding: 16px;
 }
 .card-nota_cabecalho{
